--- a/app/views/templates/layout.html
+++ b/app/views/templates/layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/css/form.css" />
   </head>
   <body>
+    {{template "navbar"}}
     <div class="container text-center">{{template "content" .}}</div>
   </body>
   <script src="/static/js/jquery-3.7.0.min.js"></script>
