--- a/app/views/templates/index.html
+++ b/app/views/templates/index.html
@@ -1,3 +1,12 @@
 {{ define "content" }}
-<h1>Index</h1>
+UserName{{.Name}}
+<h1>Sample TodoApp</h1>
+
+<p><a href="/todo/new">Create</a></p>
+<hr />
+
+{{ range .Todos }}
+<div>{{ .Content }}</div>
+<hr />
+{{end}}
 {{end}}
